--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -6,8 +6,8 @@ jobs:
   test:
     runs-on: windows-latest
     steps:
-      - uses: action/checkout@v3
-      - uses: action/setup-java@v3
+      - uses: actions/checkout@v3
+      - uses: actions/setup-java@v3
         with:
           java-version: "11"
           cache: maven
